--- a/app/Resources/views/email/connectionCreated.html.twig
+++ b/app/Resources/views/email/connectionCreated.html.twig
@@ -12,7 +12,8 @@
         {%- endfor %}.</p>
 
     <p>Maila din Fikakompis/ Musikkompis som har e-mail: {{ partner.email }}. Bestäm var och när ni ska träffas, 
-    skicka mailet inom en vecka. Vi rekommenderar att ni ses på ett kafé i ungefär en timme.</p>
+    skicka mailet inom en vecka. Vi rekommenderar att ni ses på ett kafé i ungefär en timme. Vi har också skickat 
+    din e-mail till din Fikakompis/ Musikkompis.</p>
 
     <p>
         Skicka gärna ett foto från er fika och berätta om hur du tycker att det var. Vi vill gärna dela med oss av det för att
