--- a/app/Resources/views/base.html.twig
+++ b/app/Resources/views/base.html.twig
@@ -59,6 +59,7 @@
                     <li><a href="{{ path('how_it_works') }}">Bli fikakompis</a></li>
                     <li><a href="{{ path('terms') }}">Villkor</a></li>
                     <li><a href="{{ path('work_with_us') }}">Stöd oss</a></li>
+                    <li><a href="{{ path('musicfriend') }}">Musikkompis</a></li>
                     <li><a href="{{ path('about') }}">Om oss</a></li>
                     {% if is_granted('IS_AUTHENTICATED_FULLY') %}
                         <li class="dropdown">
