--- a/app/Resources/views/base.html.twig
+++ b/app/Resources/views/base.html.twig
@@ -79,7 +79,7 @@
                                     Admin<span class="fa fa-angle-down"></span>
                                 </a>
                                 <ul class="dropdown-menu" role="menu">
-                                    <li><a href="{{ path('admin_start') }}">Personer att koppla ihop</a></li>
+                                    <li><a href="{{ path('admin_start') }}">Fikakompisar att matcha</a></li>
                                     <li><a href="{{ path('admin_connections') }}">Matchade fikakompisar</a></li>
                                     <li><a href="{{ path('admin_users') }}">Användare</a></li>
                                 </ul>
