--- a/app/Resources/views/static/musicfriend.html.twig
+++ b/app/Resources/views/static/musicfriend.html.twig
@@ -4,22 +4,22 @@
 
     <div class="inner-page">
         <div class="container">
-            <h2><strong>Musikkompis</strong></h2>
-       <div class="row">
-            <div class="col-md-8 col-sm-8">
-                <p>
-                    Dela musikupplevelser med människor från andra kulturer. Vi vet att musik är en stark förenande kraft. 
-                    Därför startar vi nu Musikkompis, tillsammans med mobiloperatören 3, för alla som vill mötas genom musik. 
-                    Det kan vara allt från att spela musik tillsammans, lyssna eller prata musik över en fika.
-                </p>
-                <p>
-                    Musik är en förenande kraft. Genom att dela musikupplevelser med varandra kan vi skapa många stunder av 
-                    gemenskap och samhörighet oavsett var du kommer ifrån eller tror på. Stunder som i slutändan bidrar till 
-                    större tolerans och ökad förståelse i samhället. Därför har vi startat projektet Musikkompis – ett ideellt 
-                    samarbete mellan 3 och Kompisbyrån som syftar till att med musikens hjälp stärka integrationen och gemenskapen 
-                    i samhället. Vi vill ge fler möjlighet att utöva musik tillsammans, människor som på olika nivåer sysslar med 
-                    musik: artister, källarband, DJ:s, klassiska musiker, konsertbesökare och andra musikintresserade. 
-                    Bli Musikkompis du också!
-                </p>
-            </div>
+            <img src="{{ asset('images/musikkompis.png') }}" alt="Musikkompis" class="img-responsive center-block">
+
+            <p class="lead text-center">
+                Dela musikupplevelser med människor från andra kulturer. Vi vet att musik är en stark förenande kraft.
+                Därför startar vi nu Musikkompis, tillsammans med mobiloperatören 3, för alla som vill mötas genom musik.
+                Det kan vara allt från att spela musik tillsammans, lyssna eller prata musik över en fika.
+            </p>
+            <p>
+                Musik är en förenande kraft. Genom att dela musikupplevelser med varandra kan vi skapa många stunder av
+                gemenskap och samhörighet oavsett var du kommer ifrån eller tror på. Stunder som i slutändan bidrar till
+                större tolerans och ökad förståelse i samhället. Därför har vi startat projektet Musikkompis – ett ideellt
+                samarbete mellan 3 och Kompisbyrån som syftar till att med musikens hjälp stärka integrationen och gemenskapen
+                i samhället. Vi vill ge fler möjlighet att utöva musik tillsammans, människor som på olika nivåer sysslar med
+                musik: artister, källarband, DJ:s, klassiska musiker, konsertbesökare och andra musikintresserade.
+                Bli Musikkompis du också!
+            </p>
+        </div>
+    </div>
 {% endblock %}
