--- a/app/Resources/views/static/musicfriend.html.twig
+++ b/app/Resources/views/static/musicfriend.html.twig
@@ -20,6 +20,11 @@
                 musik: artister, källarband, DJ:s, klassiska musiker, konsertbesökare och andra musikintresserade.
                 Bli Musikkompis du också!
             </p>
+            <div class="text-center">
+                <a href="{{ path('fos_user_registration_register') }}" class="btn btn-lg br-orange" style="color:#fff">
+                    <i class="fa fa-users"></i> {{ 'homepage.cta.musicfriend.button'|trans }}
+                </a>
+            </div>
         </div>
     </div>
 {% endblock %}
