--- a/app/Resources/views/user/settings.html.twig
+++ b/app/Resources/views/user/settings.html.twig
@@ -44,9 +44,8 @@
 
                         <div class="form-group">
                             {{ form_label(form.musicFriend) }}
-                            <div class="col-sm-10 col-lg-offset-2" style="border: dotted 2px red">
+                            <div class="col-sm-10 col-lg-offset-2">
                                 {{ form_widget(form.musicFriend) }}
-                                Moar text here!
                             </div>
                         </div>
 
@@ -56,7 +55,7 @@
                                 {{ form_widget(form.categories) }}
                                 {{ form_errors(form.categories) }}
                             </div>
-                            <div class="col-sm-5" style="border: dotted 2px red">
+                            <div class="col-sm-5">
                                 {{ form_widget(form.musicCategories) }}
                                 {{ form_errors(form.musicCategories) }}
                             </div>
