Music friend admin

--- a/app/Resources/views/base.html.twig
+++ b/app/Resources/views/base.html.twig
@@ -80,6 +80,7 @@
                                 </a>
                                 <ul class="dropdown-menu" role="menu">
                                     <li><a href="{{ path('admin_start') }}">Fikakompisar att matcha</a></li>
+                                    <li><a href="{{ path('admin_start', {'type': 'musicfriend'}) }}">Musikkompisar att matcha</a></li>
                                     <li><a href="{{ path('admin_connections') }}">Matchade fikakompisar</a></li>
                                     <li><a href="{{ path('admin_users') }}">Användare</a></li>
                                 </ul>
