Added seperate cta for musikkompis

--- a/app/Resources/views/default/notLoggedIn.html.twig
+++ b/app/Resources/views/default/notLoggedIn.html.twig
@@ -1,5 +1,6 @@
 <div class="inner-page">
     {% include 'ctaBox.html.twig' %}
+    {% include 'musicBox.html.twig' %}
 </div>
 
 <!-- Inner Page Heading -->
