--- a/app/Resources/views/musicBox.html.twig
+++ b/app/Resources/views/musicBox.html.twig
@@ -1,6 +1,6 @@
-<div class="cta--music">
+<div class="cta--musik">
     <div class="container">
-        <div class="cta--music__item">
+        <div class="cta--musik__item">
             <div class="row">
                 
 				<div class="col-md-12 col-sm-12">
