--- a/app/Resources/views/static/musicfriend.html.twig
+++ b/app/Resources/views/static/musicfriend.html.twig
@@ -1,8 +1,8 @@
-{% extends 'base.html.twig' %}
+{% extends 'baseMusic.html.twig' %}
 
 {% block body %}
 
-    <div class="inner-page">
+    <div class="inner-page musikkompis">
         <div class="container">
             <img src="{{ asset('images/musikkompis.png') }}" alt="Musikkompis" class="img-responsive center-block">
 
@@ -21,8 +21,8 @@
                 Bli Musikkompis du också!
             </p>
             <div class="text-center">
-                <a href="{{ path('fos_user_registration_register') }}" class="btn btn-lg br-orange" style="color:#fff">
-                    <i class="fa fa-users"></i> {{ 'homepage.cta.musicfriend.button'|trans }}
+                <a href="{{ path('fos_user_registration_register') }}" class="btn btn-lg br-orange">
+                    {{ 'homepage.cta.musicfriend.button'|trans }}
                 </a>
             </div>
         </div>
