Musikkompis footer styling

--- a/app/Resources/views/baseMusic.html.twig
+++ b/app/Resources/views/baseMusic.html.twig
@@ -134,7 +134,7 @@
         <div class="container">
             <div class="row">
             
-            <div class="col-md-6 col-sm-12">
+            <div class="col-md-6 col-s-12">
                 <div class="footer-widget">
                     <h4>Kontakta oss</h4>
                     <p>
@@ -149,7 +149,7 @@
                 </div>
             </div>
 
-            <div class="col-md-6 col-sm-12">
+            <div class="col-md-6 col-s-12">
                 <div class="footer-logos">
                     <img src="/images/neverstopsharing.png" class="img-responsive" alt="" />
                 </div>
