--- a/app/Resources/views/static/howItWorks.html.twig
+++ b/app/Resources/views/static/howItWorks.html.twig
@@ -4,35 +4,41 @@
 
 <div class="inner-page">
     <div class="container">
-        <h2><strong>Bli en fikakompis</strong></h2>
+        <h2><strong>Bli Fikakompis</strong></h2>
         <div class="row">
             <div class="col-md-8 col-sm-8">
                 <p>
-                    1. Gå med i Kompisbyrån. Det är gratis att anmäla sig. Skriv din e-post, ett lösenord som du bestämmer själv
-                    och klicka på "Gå med". 
-                    Läs igenom Kompisbyråns villkor. 
+                    Kompisbyrån länkar digitalt samman fikakompisar med gemensamma intressen som träffas över en fika, 
+                    en kompisfika, och pratar svenska. Vi vill göra det enklare för fler människor med olika bakgrund, 
+                    erfarenhet och kultur men med liknande intressen, att mötas och lära känna nya kompisar i vardagen.
+                    Idag har tusentals fikakompisar från 79 länder lärt känna varandra över kompisfikor. Flera fikor har 
+                    lett till jobb. Många har lett till vänskap. Träffa nya kompisar som du annars kanske inte skulle ha 
+                    mött - bli en Fikakompis!
                 </p>
                 <p>
-                    2. Berätta om dig själv. Skriv ditt namn, ålder, intressen och svara på några fler frågor. 
+                    Så här går det till:
+                </p>
+                <p>    
+                    1. Registrera dig som fikakompis genom att trycka på "Bli Fikakompis"-knappen. Det är gratis att registrera sig.  
                 </p>
                 <p>
-                    3. Matchning. Vi hittar en fikakompis till dig med liknande intressen som du har och mailar dig personens e-postadress.
+                    2. Vi hittar en fikakompis till dig som har liknande intressen som du har. Vi mailar dig fikakompisens e-mail. 
                 </p>
                 <p>
-                    4. Du mailar din fikakompis och bestämmer vilken dag, tid och plats ni ska träffas. 
-                    Vi rekommenderar att ni träffas i ungefär 1 timme på ett kafé.  
+                    3. Du mailar din fikakompis och bestämmer vilken dag, tid och plats ni ska träffas. Vi rekommenderar att ni 
+                    träffas i ungefär 1 timme på ett kafé. 
                 </p>
             </div>
             <div class="col-md-4 col-sm-4">
                 <div class="well br-white border-orange black">
                     <p>
                          En kompisfika sker en gång. Gillar ni varandra får ni gärna träffas igen själva. 
-                         Vill du träffa fler kompisar, loggar du in och anmäler dig igen. 
+                         Vill du träffa nya kompisar, loggar du in och anmäler dig igen. 
                     </p>
                 </div>
                 <div class="well br-white border-orange black">
                     <p>
-                        Observera att fikan äger rum i centrala delen av staden (om ni inte kommer överens om annat).
+                        Observera att ni bör träffas och fika i centrala delen av staden (om ni inte kommer överens om annat).
                     </p>
                 </div>
             </div>
