--- a/app/Resources/views/static/about.html.twig
+++ b/app/Resources/views/static/about.html.twig
@@ -13,17 +13,6 @@
                         sitt kontaktnät, att träffa och öva svenska med människor som av olika anledningar kommit 
                         till Sverige och som vill bli bättre på att prata svenska. Kompisbyrån är partipolitiskt och religiöst obunden.
                     </p>
-                    <p>
-                        Vi länkar digitalt samman fikakompisar med gemensamma intressen som träffas över en fika, 
-                        en kompisfika, och pratar svenska. Vi vill göra det enklare för fler människor med olika 
-                        bakgrund, erfarenhet och kultur men med liknande intressen, att mötas och lära känna nya 
-                        kompisar i vardagen.
-                    </p>
-                    <p>
-                        Idag har tusentals fikakompisar från 79 länder lärt känna varandra över kompisfikor. 
-                        Flera fikor har lett till jobb. Många har lett till vänskap. Träffa nya kompisar som du 
-                        annars kanske inte skulle ha mött - bli en fikakompis!
-                    </p>
                     <h3>Varför kompisfika?</h3>
                     <p>
                         Vi startade Kompisbyrån för att vi vill skapa en ökad gemenskap i samhället. Vi tycker att det 
@@ -45,11 +34,14 @@
                              Emma Hammar, grundare <a href="mailto:emma@kompisbyran.se">emma@kompisbyran.se </a><br>
                             Cecilia Holmgren, grundare
                             <a href="mailto:cecilia@kompisbyran.se ">cecilia@kompisbyran.se </a><br>
-                            Gabriella Hernqvist, medarbetare <br>
+                            Mikael Öhrén, verksamhetsutvecklare
                             Noa Bachner, medarbetare <br>
+                            Gabriella Hernqvist, medarbetare <br>
                             Stella Hernström, medarbetare<br>
-                             Stina Wäppling, medarbetare<br>
-                             Susanne Toscha, medarbetare
+                            Louise Koelman, medarbetare
+                            Jennifer Silander, medarbetare
+                            Susanne Toscha, medarbetare
+                            Stina Wäppling, medarbetare<br>
                         </p>
                     </div>
                     <div class="well br-white border-orange black">
