Fix footer-fusk, use custom block instead

--- a/app/Resources/views/base.html.twig
+++ b/app/Resources/views/base.html.twig
@@ -126,8 +126,9 @@
 <div class="page">
     {% block body %}{% endblock %}
 </div>
-<!-- Footer Start -->
 
+<!-- Footer Start -->
+{% block footer %}
 <div class="footer">
     <div class="footer-inner">
         <div class="container">
@@ -163,7 +164,7 @@
         </div>
     </div>
 </div>
-
+{% endblock %}
 <!-- Footer End -->
 
 
