--- a/app/Resources/views/static/musicfriend.html.twig
+++ b/app/Resources/views/static/musicfriend.html.twig
@@ -1,4 +1,4 @@
-{% extends 'baseMusic.html.twig' %}
+{% extends 'base.html.twig' %}
 
 {% block body %}
 
@@ -27,4 +27,40 @@
             </div>
         </div>
     </div>
+{% endblock %}
+
+{% block footer %}
+<!-- Footer Start -->
+<div class="footer--music">
+    <div class="footer-inner">
+        <div class="container">
+            <div class="row">
+            
+            <div class="col-md-6 col-s-12">
+                <div class="footer-widget">
+                    <h4>Kontakta oss</h4>
+                    <p>
+                        <span class="mute">E-mail</span>:
+                        <a href="mailto:kontakt@kompisbyran.se">kontakt@kompisbyran.se</a><br />
+                    </p>
+                    <div class="social">
+                        <a href="https://www.facebook.com/kompisbyran" class="facebook"><i class="fa fa-facebook"></i></a>
+                        <a href="https://www.twitter.com/kompisbyran" class="twitter"><i class="fa fa-twitter"></i></a>
+                        <a href="https://www.instagram.com/kompisbyran" class="instagram"><i class="fa fa-instagram"></i></a>
+                    </div>
+                </div>
+            </div>
+
+            <div class="col-md-6 col-s-12">
+                <div class="footer-logos">
+                    <img src="/images/neverstopsharing.png" class="img-responsive" alt="" />
+                </div>
+            </div>
+
+            </div>
+
+        </div>
+    </div>
+</div>
+<!-- Footer End -->
 {% endblock %}
