--- a/app/Resources/views/static/musicfriend.html.twig
+++ b/app/Resources/views/static/musicfriend.html.twig
@@ -7,18 +7,10 @@
             <img src="{{ asset('images/musikkompis.png') }}" alt="Musikkompis" class="img-responsive center-block">
 
             <p class="lead text-center">
-                Dela musikupplevelser med människor från andra kulturer. Vi vet att musik är en stark förenande kraft.
-                Därför startar vi nu Musikkompis, tillsammans med mobiloperatören 3, för alla som vill mötas genom musik.
-                Det kan vara allt från att spela musik tillsammans, lyssna eller prata musik över en fika.
+                {{ 'register.musicfriend.intro'|trans }}
             </p>
             <p>
-                Musik är en förenande kraft. Genom att dela musikupplevelser med varandra kan vi skapa många stunder av
-                gemenskap och samhörighet oavsett var du kommer ifrån eller tror på. Stunder som i slutändan bidrar till
-                större tolerans och ökad förståelse i samhället. Därför har vi startat projektet Musikkompis – ett ideellt
-                samarbete mellan 3 och Kompisbyrån som syftar till att med musikens hjälp stärka integrationen och gemenskapen
-                i samhället. Vi vill ge fler möjlighet att utöva musik tillsammans, människor som på olika nivåer sysslar med
-                musik: artister, källarband, DJ:s, klassiska musiker, konsertbesökare och andra musikintresserade.
-                Bli Musikkompis du också!
+                {{ 'register.musicfriend.text'|trans }}
             </p>
             <div class="text-center">
                 <a href="{{ path('fos_user_registration_register') }}" class="btn btn-lg br-orange">
