Increased margin on terms

--- a/app/Resources/views/static/terms.html.twig
+++ b/app/Resources/views/static/terms.html.twig
@@ -4,9 +4,10 @@
 
     <div class="inner-page">
         <div class="container">
-            <h2><strong>Villkor</strong></h2>
             <div class="row">
+            <div class="col-md-2 col-sm-0"></div>
                 <div class="col-md-8 col-sm-12">
+                    <h2><strong>Villkor</strong></h2>
                     <p>
                         Kompisbyrån förmedlar kontakten mellan personer som är nya i Sverige med personer som har bott i Sverige länge. 
                     </p>
