Increased margin on workwithus

--- a/app/Resources/views/static/workWithUs.html.twig
+++ b/app/Resources/views/static/workWithUs.html.twig
@@ -4,9 +4,10 @@
 
 <div class="inner-page">
     <div class="container">
-        <h2><strong>Stöd oss</strong></h2>
         <div class="row">
-            <div class="col-md-8 col-sm-12">
+            <div class="col-md-1 col-sm-0"></div>
+            <div class="col-md-7 col-sm-12">
+                <h2><strong>Stöd oss</strong></h2>
                 <h3>Stöd oss!</h3>
                 <p>
                     Vill du som privatperson, företag, kommun eller annan organisation, stötta en förening som hjälper 
