--- a/web/css/style.css
+++ b/web/css/style.css
@@ -1637,12 +1637,12 @@ div.ppt {
 /* Inner page About Us CSS */
 
 .inner-page .partner-wrapper{
-    margin: 20px 10px;
+    margin-top: 80px;
 }
 
 .inner-page .partner-logo{
     width: 80px;
-    margin-right: 30px;
+    margin: 30px;
 }
 
 /* Inner page About Us CSS */
@@ -2986,6 +2986,10 @@ div.ppt {
 
     .countdown_amount {
         font-size:30px;
+    }
+
+    .inner-page .partner-wrapper{
+        margin-top: 20px;
     }
 
     /* Footer Responsive CSS */
