--- a/app/Resources/views/base.html.twig
+++ b/app/Resources/views/base.html.twig
@@ -58,7 +58,6 @@
                     <li><a href="{{ path('homepage') }}">Hem</a></li>
                     <li><a href="{{ path('how_it_works') }}">Bli Fikakompis</a></li>
                     <li><a href="{{ path('musicfriend') }}">Bli Musikkompis</a></li>
-                    <li><a href="{{ path('terms') }}">Villkor</a></li>
                     <li><a href="{{ path('work_with_us') }}">Stöd oss</a></li>
                     <li><a href="{{ path('about') }}">Om oss</a></li>
                     {% if is_granted('IS_AUTHENTICATED_FULLY') %}
@@ -141,7 +140,8 @@
                             förening som vill göra det lätt för människor att träffas i vardagen. Genom att kompisfika  
                             skapas kontakt mellan personer som vill träna på att prata svenska och personer som har bott i  
                             Sverige länge. Hittills har tusentals människor från 79 länder träffats genom Kompisbyrån.
-                        </p>
+                            </p>
+                            <p>Läs igenom våra <a href="{{ path('terms') }}">villkor</a> innan du anmäler dig till en fika.</p>
                     </div>
                 </div>
                 <div class="col-md-4 col-sm-5">
