--- a/app/Resources/views/static/about.html.twig
+++ b/app/Resources/views/static/about.html.twig
@@ -54,7 +54,7 @@
                     </div>
                     <div class="well br-white border-orange black">
                         <p>
-                            Frågor om matchningen? Maila matchning@kompisbyran.se
+                            Frågor om matchningen? Maila <a href="mailto:matchning@kompisbyran.se">matchning@kompisbyran.se</a>
                         </p>
                     </div>
                 </div>
