--- a/app/Resources/views/static/howItWorks.html.twig
+++ b/app/Resources/views/static/howItWorks.html.twig
@@ -4,10 +4,17 @@
 
 <div class="inner-page">
     <div class="container">
-        <h2><strong>Bli en fikakompis</strong></h2>
+        <h2><strong>Bli Fikakompis</strong></h2>
         <div class="row">
             <div class="col-md-8 col-sm-8">
                 <p>
+                    Kompisbyrån länkar digitalt samman nya fikakompisar med gemensamma intressen som träffas över en fika, 
+                    en kompisfika, och pratar svenska. Den ena personen är ny i Sverige och vill öva sin svenska och den 
+                    andra personen pratar flytande svenska och har bott i Sverige länge. Båda personerna vill träffa en ny 
+                    fikakompis och utbyta erfarenheter. Idag har tusentals fikakompisar lärt känna varandra över en kompisfika. 
+                    Träffa nya kompisar som du annars kanske inte skulle ha mött - bli en Fikakompis!
+                </p>
+                <p>    
                     1. Gå med i Kompisbyrån. Det är gratis att anmäla sig. Skriv din e-post, ett lösenord som du bestämmer själv
                     och klicka på "Gå med". 
                     Läs igenom Kompisbyråns villkor. 
