--- a/app/Resources/views/static/howItWorks.html.twig
+++ b/app/Resources/views/static/howItWorks.html.twig
@@ -14,27 +14,26 @@
                     fikakompis och utbyta erfarenheter. Idag har tusentals fikakompisar lärt känna varandra över en kompisfika. 
                     Träffa nya kompisar som du annars kanske inte skulle ha mött - bli en Fikakompis!
                 </p>
+                <p> 
+                <h3>Så här går det till:</h3>
+                </p>
                 <p>    
-                    1. Gå med i Kompisbyrån. Det är gratis att anmäla sig. Skriv din e-post, ett lösenord som du bestämmer själv
-                    och klicka på "Gå med". 
-                    Läs igenom Kompisbyråns villkor. 
+                    1. Registrera dig som fikakompis genom att trycka på "Bli Fikakompis"-knappen. Det är gratis att registrera sig. 
+                    Läs igenom Kompisbyråns villkor innan. 
                 </p>
                 <p>
-                    2. Berätta om dig själv. Skriv ditt namn, ålder, intressen och svara på några fler frågor. 
+                    2. Vi hittar en fikakompis till dig som har liknande intressen som du har. Vi mailar dig fikakompisens e-mail. 
                 </p>
                 <p>
-                    3. Matchning. Vi hittar en fikakompis till dig med liknande intressen som du har och mailar dig personens e-postadress.
-                </p>
-                <p>
-                    4. Du mailar din fikakompis och bestämmer vilken dag, tid och plats ni ska träffas. 
-                    Vi rekommenderar att ni träffas i ungefär 1 timme på ett kafé.  
+                    3. Du mailar din fikakompis och bestämmer vilken dag, tid och plats ni ska träffas. Vi rekommenderar att ni 
+                    träffas i ungefär 1 timme på ett kafé. 
                 </p>
             </div>
             <div class="col-md-4 col-sm-4">
                 <div class="well br-white border-orange black">
                     <p>
                          En kompisfika sker en gång. Gillar ni varandra får ni gärna träffas igen själva. 
-                         Vill du träffa fler kompisar, loggar du in och anmäler dig igen. 
+                         Vill du träffa en ny fikakompis? Logga in och anmäl dig igen. 
                     </p>
                 </div>
                 <div class="well br-white border-orange black">
