--- a/app/Resources/views/static/workWithUs.html.twig
+++ b/app/Resources/views/static/workWithUs.html.twig
@@ -10,21 +10,18 @@
                 <h2><strong>Stöd oss</strong></h2>
                 <h3>Stöd oss!</h3>
                 <p>
-                    Vill du som privatperson, företag, kommun eller annan organisation, stötta en förening som hjälper 
-                    tusentals människor att få ett socialt sammanhang i samhället? På Kompisbyrån jobbar vi aktivt för 
-                    att skapa nya kontaktytor mellan nya och etablerade svenskar och ge fler chansen att öva svenska i 
-                    vardagen. 7 av 10 jobb förmedlas via kontakter och genom oss breddar och berikar människor sina 
-                    kontaktnät och får mer språkträning. Då blir det mycket lättare att komma in på arbetsmarknaden, 
-                    få en egen bostad och hitta nya kompisar. Stöd oss till ett öppnare samhälle där alla kan känna sig 
-                    delaktiga och välkomna. Maila <a href="mailto:emma@kompisbyran.se">emma@kompisbyran.se</a> så 
-                    berättar vi mer om hur du kan stötta vår verksamhet.
+                    Vill du som privatperson, företag, kommun eller annan organisation, stötta en förening som hjälper tusentals 
+                    människor att få ett socialt sammanhang i samhället? På Kompisbyrån jobbar vi aktivt för att skapa nya 
+                    kontaktytor mellan nya och etablerade svenskar och ge fler chansen att öva svenska i vardagen. Då blir det 
+                    mycket lättare att komma in på arbetsmarknaden, få en egen bostad och hitta nya kompisar. Stöd oss till ett 
+                    öppnare samhälle där alla kan känna sig delaktiga och välkomna. Maila <a href="mailto:kontakt@kompisbyran.se">kontakt@kompisbyran.se</a> 
+                    så berättar vi mer om hur du kan stötta vår verksamhet.
                 </p>
 
                 <h3>Tack till...</h3>
                 <p>
                     <strong>Svenska Postkodstiftelsen</strong> som stöttar Kompisbyrån. Tack vare detta
-                    bidrag har vi fått möjlighet att effektivisera vårt arbete genom att bl.a. utveckla vårt datasystem
-                    och hemsida.
+                    bidrag har vi fått möjlighet att effektivisera vårt arbete genom att bl.a. utveckling av datasystem och hemsida.
                 </p>
                 <p>
                     <strong>Sigtunastiftelsen</strong> som 2015 belönade Kompisbyrån med <a
