--- a/app/Resources/views/admin/default/index.html.twig
+++ b/app/Resources/views/admin/default/index.html.twig
@@ -51,9 +51,7 @@
                     {% endfor %}
                     <br>
                     {{ connectionRequest.createdAt|date('Y-m-d') }}<br>
-                    {% if connectionRequest.user.district %}
-                        {{ connectionRequest.user.district }}<br>
-                    {% endif %}
+                    {{ connectionRequest.user.municipality.name }}<br>
                     {% if connectionRequest.comment %}
                         "<em>{{ connectionRequest.comment|nl2br }}</em>"<br>
                     {% endif %}
