--- a/app/Resources/views/static/musicfriend.html.twig
+++ b/app/Resources/views/static/musicfriend.html.twig
@@ -45,7 +45,7 @@
 
             <div class="col-md-6 col-s-12">
                 <div class="footer-logos">
-                    <img src="/images/neverstopsharing.png" class="img-responsive" alt="" />
+                    <a href="//tre.se"><img src="/images/neverstopsharing.png" class="img-responsive" alt="" /></a>
                 </div>
             </div>
 
