--- a/app/Resources/views/static/about.html.twig
+++ b/app/Resources/views/static/about.html.twig
@@ -30,7 +30,7 @@
                              Emma Hammar, grundare <a href="mailto:emma@kompisbyran.se">emma@kompisbyran.se </a><br>
                             Cecilia Holmgren, grundare
                             <a href="mailto:cecilia@kompisbyran.se ">cecilia@kompisbyran.se </a><br>
-                            Mikael Öhrén, verksamhetsutvecklare
+                            Mikael Öhrén, verksamhetsutvecklare <br>
                             Noa Bachner, medarbetare <br>
                             Gabriella Hernqvist, medarbetare <br>
                             Stella Hernström, medarbetare<br>
