--- a/app/Resources/views/email/connectionCreated.txt.twig
+++ b/app/Resources/views/email/connectionCreated.txt.twig
@@ -1,14 +1,19 @@
 Hej {{ recipient.firstName }}!
 
 Vad kul att du vill vara med i Kompisbyrån!
+{% if connection.musicFriend %}
+    {% set categories = partner.musicCategories %}
+{% else %}
+    {% set categories = partner.categories %}
+{% endif %}
 
-Vi har nu hittat en Fikakompis/ Musikkompis till dig. {{ partner.gender|pronoun|capitalize }} heter {{ partner.name }} och gillar {% for category in partner.categories -%}
+Vi har nu hittat en {{ connection.musicFriend ? 'Musikkompis' : 'Fikakompis' }} till dig. {{ partner.gender|pronoun|capitalize }} heter {{ partner.name }} och gillar {% for category in categories -%}
     {{ category.name|lower }}{% if loop.revindex == 2 %} och {% elseif not loop.last %}, {% endif %}
 {%- endfor %}.
 
-Maila din Fikakompis/ Musikkompis som har e-mail: {{ partner.email }}. Bestäm var och när ni ska träffas, 
+Maila din {{ connection.musicFriend ? 'Musikkompis' : 'Fikakompis' }} som har e-mail: {{ partner.email }}. Bestäm var och när ni ska träffas,
 skicka mailet inom en vecka. Vi rekommenderar att ni ses på ett kafé i ungefär en timme. Vi har också 
-skickat din e-mail till din Fikakompis/ Musikkompis. 
+skickat din e-mail till din {{ connection.musicFriend ? 'Musikkompis' : 'Fikakompis' }}.
 
 Skicka gärna ett foto från er fika och berätta om hur du tyckte att det var. Vi vill gärna dela det för att uppmuntra fler till att vara med
 och få information om Kompisbyrån.
