Musikkompis footer styling

--- a/app/Resources/views/static/musicfriend.html.twig
+++ b/app/Resources/views/static/musicfriend.html.twig
@@ -28,7 +28,7 @@
         <div class="container">
             <div class="row">
             
-            <div class="col-md-6 col-s-12">
+            <div class="col-sm-6 col-xs-12">
                 <div class="footer-widget">
                     <h4>Kontakta oss</h4>
                     <p>
@@ -43,8 +43,9 @@
                 </div>
             </div>
 
-            <div class="col-md-6 col-s-12">
+            <div class="col-sm-6 col-xs-12">
                 <div class="footer-logos">
+                    <img src="/images/KB-logo.gif" class="img-responsive kb-logo" alt="" />
                     <a href="//tre.se"><img src="/images/neverstopsharing.png" class="img-responsive" alt="" /></a>
                 </div>
             </div>
