Change 3 logo link to /musikkompis

--- a/app/Resources/views/static/musicfriend.html.twig
+++ b/app/Resources/views/static/musicfriend.html.twig
@@ -46,7 +46,7 @@
             <div class="col-sm-6 col-xs-12">
                 <div class="footer-logos">
                     <img src="/images/KB-logo.gif" class="img-responsive kb-logo" alt="" />
-                    <a href="//tre.se"><img src="/images/neverstopsharing.png" class="img-responsive" alt="" /></a>
+                    <a href="//tre.se/musikkompis"><img src="/images/neverstopsharing.png" class="img-responsive" alt="" /></a>
                 </div>
             </div>
 
