--- a/web/css/style.css
+++ b/web/css/style.css
@@ -932,15 +932,17 @@ fotm textarea{
 .cta--musik .cta--musik__item h2{
     display: block;
     margin: 0 auto;
-    width: 80%;
+    width: 50%;
+    min-width: 375px;
     text-align: center;
-    font-size: 48px;
+    font-size: 54px;
     font-weight: bold;
 }
 
 .cta--musik .cta--musik__item p{
     display: block;
     width: 80%;
+    max-width: 700px;
     margin: 20px auto;
     text-align: center;
     font-size: 14px;
